# spectrum-visualizer

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/: MCMCv2.json  footnote.json  footnotes_by_service.json  spectrum.json
data/Excel Files/: MCMC v2.xlsx  foonote allocations.xlsx  spectrum.xlsx
mcmc_visualizer/: __init__.py  callbacks.py  data.py  frequency.py  layout.py  spectrum.py
tests/: test_allocation_layout.py  test_allocation_selection.py  test_data_loading.py  test_footnote_selection.py  test_spectrum_layout.py  test_spectrum_selection.py  test_spectrum_viewport.py
