[project]
name = "mcmc-visualizer"
version = "0.1.0"
description = "Interactive dashboard for MCMC frequency allocation visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
]

[project.scripts]
mcmc-dashboard = "app:main"
